исправила некоторые названия

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -175,9 +175,9 @@
                                        name="name">
                             </div>
                             <div class="form-group">
-                                <label for="edit_surname" class="font-weight-bold mb-0">Surname:</label>
-                                <input type="text" required class="form-control" id="edit_surname"
-                                       name="surname">
+                                <label for="edit_lastName" class="font-weight-bold mb-0">Last Name:</label>
+                                <input type="text" required class="form-control" id="edit_lastName"
+                                       name="lastName">
                             </div>
                             <div class="form-group">
                                 <label for="edit_age" class="font-weight-bold mb-0">Age:</label>
@@ -236,9 +236,9 @@
                                        name="name">
                             </div>
                             <div class="form-group">
-                                <label for="delete_surname" class="font-weight-bold mb-0">Surname:</label>
-                                <input type="text" class="form-control" disabled id="delete_surname"
-                                       name="surname">
+                                <label for="delete_lastName" class="font-weight-bold mb-0">Last Name:</label>
+                                <input type="text" class="form-control" disabled id="delete_lastName"
+                                       name="lastName">
                             </div>
                             <div class="form-group">
                                 <label for="delete_age" class="font-weight-bold mb-0">Age:</label>
