--- a/src/main/resources/templates/show.html
+++ b/src/main/resources/templates/show.html
@@ -53,7 +53,7 @@
                         <th>ID</th>
                         <th>Login</th>
                         <th>Name</th>
-                        <th>Surname</th>
+                        <th>Last Name</th>
                         <th>Age</th>
                         <th>Email</th>
                         <th>Roles</th>
